correct note section  & alignment of center div

--- a/animatedWorkout/styleReDesign.css
+++ b/animatedWorkout/styleReDesign.css
@@ -12,7 +12,7 @@ html, body {margin:0;padding:0;height:100%;	min-width:320px;
 
 .container{
 	width: 100%;
-	height:100%;
+	height:100%;subSectionNote
 	max-width:1024px;
 	min-height: 100%;
 	min-width:320px;
@@ -182,7 +182,7 @@ html, body {margin:0;padding:0;height:100%;	min-width:320px;
 	float:left;
 	position: absolute;
 	z-index: 0;
-	max-width:1024px
+min-width:1024px;
 }
 
 .closeImage{
